# jupyter-ai-personas

./: pyproject.toml  repo_context.md
jupyter_ai_personas/context_retrieval_persona/: README.md  context_retrieval_persona.py  rag_core.py  rag_integration_tool.py  test_time_series.ipynb
jupyter_ai_personas/data_science_persona/: README.md  __init__.py  agent.py  autogluon_tool.py  file_reader_tool.py  flow.py  nodes.py  persona.py  pocketflow.py  test_time_series.ipynb
jupyter_ai_personas/pocketflow_context_retrieval/: config.py  persona.py
jupyter_ai_personas/pocketflow_context_retrieval/agents/: __init__.py  conversational_agent.py
jupyter_ai_personas/pocketflow_context_retrieval/flows/: context_flow.py
jupyter_ai_personas/pocketflow_context_retrieval/nodes/: notebook_analysis.py  output.py  rag_search.py  synthesis.py
jupyter_ai_personas/pocketflow_context_retrieval/utils/: content_utils.py  embedding_utils.py  llm_utils.py  notebook_utils.py  vector_utils.py
jupyter_ai_personas/pr_review_persona/: README.md  fetch_ci_failures.py  persona.py  pr_comment_tool.py
