[project]
name = "jupyter-ai-personas"
version = "0.1.0"
description = "Enhancing Jupyter AI with Personas"
readme = "README.md"
authors = [
    { name = "S R Das", email = "srdas@scu.edu" }
]
requires-python = ">=3.9"

dependencies = [
    "jupyter_ai>=3.0.0a1"
]

[project.optional-dependencies]
finance = [
    "boto3",
    "lancedb", 
    "tantivy", 
    "pypdf", 
    "faiss-cpu",
    "duckdb",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "mcp",
    "agno",
    "duckduckgo-search",
    "ddgs",
    "matplotlib",
    "statsmodels",
    "yfinance",
    "openai"
]
emoji = [
    "emoji",
    "langchain-aws"
]

software_team = [ 
    "agno",
    "boto3",
    "langchain",
   ]


pr_review = [
    "agno",
    "boto3",
    "pygithub",
    ]

data_analytics = [
    "agno",
    "boto3",
    "pandas",
    "numpy",
    "matplotlib",
    "jupyter",
    "ipython",
    "seaborn"
]

data_science = [
    "agno",
    "boto3",
    "pandas",
    "numpy",
    "matplotlib",
    "jupyter",
    "ipython",
    "seaborn",
    "scikit-learn",
    "scipy",
    "chromadb",
    "sentence-transformers",
    "langchain-core",
    "autogluon"
]

context_retriever = [
    "agno",
    "boto3",
    "langchain",
    "langchain-core"
]

all = ["jupyter-ai-personas[finance,emoji,software_team,data_analytics,pr_review,data_science,context_retriever]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."jupyter_ai.personas"]
finance_persona = "jupyter_ai_personas.finance_persona.persona:FinancePersona"
emoji_persona = "jupyter_ai_personas.emoji_persona.persona:EmojiPersona"
software_team_persona = "jupyter_ai_personas.software_team_persona.persona:SoftwareTeamPersona"
data_analytics_persona = "jupyter_ai_personas.data_analytics_persona.persona:DataAnalyticsTeam"
pr_review_persona = "jupyter_ai_personas.pr_review_persona.persona:PRReviewPersona"
data_science_persona = "jupyter_ai_personas.data_science_persona.persona:DataSciencePersona"
context_retrieval_persona = "jupyter_ai_personas.context_retrieval_persona.context_retrieval_persona:ContextRetrievalPersona"
